Add Vector Boson Fusion section with production details and diagram to slides

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -80,6 +80,27 @@
     \end{itemize}
 \end{frame}
 
+\section{Theoretical Framework}
+\begin{frame}{Vector Boson Fusion (VBF) Production}
+    \begin{minipage}{0.38\textwidth}
+        \begin{center}
+            \includegraphics[width=\textwidth]{../Images/VBF.png}
+        \end{center}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.6\textwidth}
+        The Higgs boson is narrow: 
+        \begin{equation*}
+            \Gamma_h/m_h = 4.07 \text{ MeV}/125 \text{ GeV} \approx 3.3 \times 10^{-5}
+        \end{equation*}
+        Cross section factorizes into production and decay:
+        \begin{multline*}
+            \sigma_{\text{total}} = \sigma_{\text{prod}} (\textcolor{red}{pp\boldsymbol{\to}j\,j\, h})  \times \text{BR}(\textcolor{blue}{h \boldsymbol{\to} \text{inv.}})
+        \end{multline*}
+    \end{minipage}
+\end{frame}
+
+
 \begin{frame}{Higgs-Portal Dark Matter Models}
     \begin{itemize}
         \item Scalar DM candidate: $\mathcal{L} \supset \lambda_s |H|^2 S^2$
@@ -89,14 +110,7 @@
     \end{itemize}
 \end{frame}
 
-\section{Theoretical Framework}
-\begin{frame}{Vector Boson Fusion (VBF) Production}
-    \begin{itemize}
-        \item VBF topology: $pp \to jj H$ with forward jets
-        \item Distinctive experimental signature
-        \item Advantages over gluon-gluon fusion for invisible searches
-    \end{itemize}
-\end{frame}
+
 
 \begin{frame}{Invisible Higgs Decay Channels}
     \begin{itemize}
