Update slides for Higgs-Portal DM presentation: comment out outline frame and refine VBF jets descriptions

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -67,9 +67,9 @@
     To this end, we perform simulations in MadGraph5\_aMC@NLO under LHC conditions to compute cross sections for VBF Higgs production followed by invisible decays. Experimental efficiencies are estimated through a recast of public analyses targeting the process $pp \to jj + \text{MET}$. We then rescale the integrated luminosity to project the reach of the High-Luminosity LHC (HL-LHC), identifying both currently excluded regions and those potentially probed with 3 ab$^{-1}$. Our results provide updated exclusion contours and projections in the Higgs-portal to DM parameter space.
 \end{frame}
 
-\begin{frame}{Outline}
-    \tableofcontents
-\end{frame}
+% \begin{frame}{Outline}
+%     \tableofcontents
+% \end{frame}
 
 % \section{Introduction}
 % \begin{frame}{Dark Matter: A Missing Piece}{One of the Main Problems in 
@@ -216,7 +216,7 @@ Contemporary Physics}
     No Electrons or Muons neither isolated muons. 
 \end{frame}
 
-\begin{frame}{The VBF Jets are boosted with High-PT signatures}
+\begin{frame}{VBF Jets are boosted with High-PT signatures}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/leading_jet_pt_comparison.pdf}
     \end{minipage}
@@ -225,14 +225,14 @@ Contemporary Physics}
     % \end{minipage}
 \end{frame}
 
-\begin{frame}{The VBF Jets have a large invariant mass}
+\begin{frame}{VBF Jets have a large invariant mass}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/dijet_mass_comparison.pdf}
     \end{minipage}
     
 \end{frame}
 
-\begin{frame}{The VBF Jets are forward}
+\begin{frame}{VBF Jets are forward}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/leading_jet_eta_comparison.pdf}
     \end{minipage}
@@ -241,15 +241,15 @@ Contemporary Physics}
     % \end{minipage}
 \end{frame}
 
-\begin{frame}{The VBF Jets are in opposite longitudinal hemispheres}
+\begin{frame}{VBF Jets are in opposite longitudinal hemispheres}
     \includegraphics[width=\textwidth]{../Images/eta_product_comparison.pdf}
 \end{frame}
 
-\begin{frame}{The VBF Jets have a large Delta-$\eta$ separation}
+\begin{frame}{VBF Jets have a large Delta-$\eta$ separation}
     \includegraphics[width=\textwidth]{../Images/delta_eta_comparison.pdf}
 \end{frame}
 
-\begin{frame}{The VBF Jets are not back-to-back}
+\begin{frame}{VBF Jets are not back-to-back}
     \includegraphics[width=\textwidth]{../Images/delta_phi_comparison.pdf}
 \end{frame}
 
@@ -258,7 +258,7 @@ Contemporary Physics}
 \end{frame}
 
 \begin{frame}{All the cuts suppres the background}
-    \includegraphics[width=\textwidth]{../Images/met_comparison_after_vbf_cuts.pdf}
+    \includegraphics[width=1.1\textwidth]{../Images/met_comparison_after_vbf_cuts.pdf}
 \end{frame}
 
 \begin{frame}{Higgs-Portal Dark Matter Models}
@@ -316,7 +316,7 @@ Contemporary Physics}
     \begin{itemize}
         \item The current limit on the Higgs-to-invisible decay is $\text{BR}(H \to \text{inv}) < 0.145$ (ATLAS, 2019, 95\% CL).
         \item Today the luminosity in ATLAS and CMS are arround 300~fb$^{-1}$ by the end of Run~3. So, in the near future we expect that LHC reach a sensitivity of $\text{BR}(H \to \text{inv}) < 0.08$.
-        \item With the HL-LHC, the promised integrated luminosity is 3 ab$^{-1}$, which will allow us to improve the sensitivity to $\text{BR}(H \to \text{inv}) < 0.008 = \mathcal{O}(10^{-2})$.
+        \item With the HL-LHC, the promised integrated luminosity is 3 ab$^{-1}$, which will allow us to improve the sensitivity to $\text{BR}(H \to \text{inv}) < 0.008 \sim \mathcal{O}(10^{-2})$.
         \item For FCC, the expected integrated luminosity is 30 ab$^{-1}$, which will allow us to improve the sensitivity to $\text{BR}(H \to \text{inv}) < \mathcal{O}(10^{-3})$.
     \end{itemize}
     
