Refine VBF Jets slides: update titles, add invariant mass frame, and adjust images

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -216,7 +216,7 @@ Contemporary Physics}
     No Electrons or Muons neither isolated muons. 
 \end{frame}
 
-\begin{frame}{VBF Jets are boosted with High-PT signatures}
+\begin{frame}{VBF Jets are boosted with High-PT signatures}{Leading Jet}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/leading_jet_pt_comparison.pdf}
     \end{minipage}
@@ -224,12 +224,10 @@ Contemporary Physics}
     %     \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
     % \end{minipage}
 \end{frame}
-
-\begin{frame}{VBF Jets have a large invariant mass}
+\begin{frame}{VBF Jets are boosted with High-PT signatures}{Subleading Jet}
     \begin{minipage}{0.97\textwidth}
-        \includegraphics[width=\textwidth]{../Images/dijet_mass_comparison.pdf}
+        \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
     \end{minipage}
-    
 \end{frame}
 
 \begin{frame}{VBF Jets are forward}
@@ -248,10 +246,18 @@ Contemporary Physics}
 \begin{frame}{VBF Jets have a large Delta-$\eta$ separation}
     \includegraphics[width=\textwidth]{../Images/delta_eta_comparison.pdf}
 \end{frame}
-
 \begin{frame}{VBF Jets are not back-to-back}
     \includegraphics[width=\textwidth]{../Images/delta_phi_comparison.pdf}
 \end{frame}
+\begin{frame}{VBF Jets have a large invariant mass}
+    $$
+    m_{jj} \approx \sqrt{2 p_{T,1} p_{T,2} \left( \cosh(\Delta\eta) - \cos(\Delta\phi) \right)}
+    $$
+    \begin{minipage}{0.95\textwidth}
+        \includegraphics[width=\textwidth]{../Images/dijet_mass_comparison.pdf}
+    \end{minipage}
+\end{frame}
+
 
 \begin{frame}{The Higgs-to-invisible decay left a High-MET signature}
     \includegraphics[width=\textwidth]{../Images/met_comparison.pdf}
