Refine VBF Jets slide: correct invariant mass equation and adjust image widths

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -256,9 +256,10 @@ Contemporary Physics}
 
 \begin{frame}{VBF Jets have a large invariant mass}
     $$
-    m_{jj} \approx \sqrt{2 p_{T,1} p_{T,2} \left( \cosh(\Delta\eta) - \cos(\Delta\phi) \right)}
+    m_{jj} = \sqrt{2 p_{T,1} p_{T,2} \left( \cosh(\Delta\eta) - \cos(\Delta\phi) \right)}
+    \approx \sqrt{2 p_{T,1} p_{T,2} \cosh(\Delta\eta)}
     $$
-    \begin{minipage}{0.95\textwidth}
+    \begin{minipage}{0.9\textwidth}
         \includegraphics[width=\textwidth]{../Images/dijet_mass_comparison.pdf}
     \end{minipage}
 \end{frame}
@@ -267,7 +268,7 @@ Contemporary Physics}
 
 
 \begin{frame}{All the cuts suppres the background}
-    \includegraphics[width=1.1\textwidth]{../Images/met_comparison_after_vbf_cuts.pdf}
+    \includegraphics[width=.95\textwidth]{../Images/met_comparison_after_vbf_cuts.pdf}
 \end{frame}
 
 \begin{frame}{Higgs-Portal Dark Matter Models}
