Update references and refine slides for Higgs-to-invisible decay presentation

--- a/HiggsPortals/2025_Nemoc/references.bib
+++ b/HiggsPortals/2025_Nemoc/references.bib
@@ -11,3 +11,34 @@
     pages = "095026",
     year = "2022"
 }
+
+@article{CMS:2022qva,
+    author = "Tumasyan, Armen and others",
+    collaboration = "CMS",
+    title = "{Search for invisible decays of the Higgs boson produced via vector boson fusion in proton-proton collisions at s=13{\,}{\,}TeV}",
+    eprint = "2201.11585",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-HIG-20-003, CERN-EP-2021-273",
+    doi = "10.1103/PhysRevD.105.092007",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "9",
+    pages = "092007",
+    year = "2022"
+}
+
+@article{ATLAS:2022yvh,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{Search for invisible Higgs-boson decays in events with vector-boson fusion signatures using 139 fb$^{-1}$ of proton-proton data recorded by the ATLAS experiment}",
+    eprint = "2202.07953",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-EP-2021-258",
+    doi = "10.1007/JHEP08(2022)104",
+    journal = "JHEP",
+    volume = "08",
+    pages = "104",
+    year = "2022"
+}
