--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -67,31 +67,9 @@
     To this end, we perform simulations in MadGraph5\_aMC@NLO under LHC conditions to compute cross sections for VBF Higgs production followed by invisible decays. Experimental efficiencies are estimated through a recast of public analyses targeting the process $pp \to jj + \text{MET}$. We then rescale the integrated luminosity to project the reach of the High-Luminosity LHC (HL-LHC), identifying both currently excluded regions and those potentially probed with 3 ab$^{-1}$. Our results provide updated exclusion contours and projections in the Higgs-portal to DM parameter space.
 \end{frame}
 
-% \begin{frame}{Outline}
-%     \tableofcontents
-% \end{frame}
-
-% \section{Introduction}
-% \begin{frame}{Dark Matter: A Missing Piece}{One of the Main Problems in 
-% Contemporary Physics}
-%     \begin{minipage}{0.5\textwidth}
-%         \begin{itemize}
-%             \item Populates the universe with non-baryonic matter.
-%             \item It is near to the 25\% of the total energy density of the universe.
-%             \item Mainly cold, non-relativistic, and weakly or feably interacting (massive).
-%             \item It is ``invisible'' to the standard detection methods.
-%         \end{itemize}
-%     \end{minipage}
-%     \hfill
-%     \begin{minipage}{0.45\textwidth}
-%         \includegraphics[width=\textwidth]{../Images/schematic_DMdetections.png}
-%     \end{minipage}
-%     \pause
-%     % \vfill
-%     \begin{center}
-%         \includegraphics[width=0.7\textwidth]{../Images/Higgs_portal.png}
-%     \end{center}
-% \end{frame}
+\begin{frame}{Outline}
+    \tableofcontents
+\end{frame}
 
 \section{Introduction}
 \begin{frame}{Dark Matter: A Missing Piece}{One of the Main Problems in 
@@ -143,7 +121,6 @@ Contemporary Physics}
   \end{itemize}
 \end{frame}
 
-\section{Theoretical Framework}
 \begin{frame}{Vector Boson Fusion (VBF) Production}
 
     One of the most studied and well known production mechanisms of the Higgs boson at the LHC is VBF. 
@@ -178,7 +155,7 @@ Contemporary Physics}
     \end{minipage}
 \end{frame}
 
-
+\section{Monte Carlo Method}
 \begin{frame}{Monte Carlo Method Workflow}
 	\includegraphics[width=1.0\linewidth]{../Images/Workflow.png}
 \end{frame}
@@ -189,6 +166,7 @@ Contemporary Physics}
 	\end{center}
 \end{frame}
 
+\section{Observables}
 \begin{frame}{Kinematic Variables}
     From Spherical coordinates,
     $$
@@ -215,6 +193,8 @@ Contemporary Physics}
     \end{center}
 \end{frame}
 
+
+\section{VBF Kinematics}
 \begin{frame}{Current Results from VBF + MET Searches}
     \begin{columns}
         \begin{column}{0.4\textwidth}
@@ -285,6 +265,8 @@ Contemporary Physics}
     \includegraphics[width=.95\textwidth]{../Images/met_comparison_after_vbf_cuts.pdf}
 \end{frame}
 
+
+\section{Results and Projections}
 \begin{frame}{Higgs-Portal Dark Matter Models}
     \includegraphics[width=\textwidth]{../Images/Altas_Result.png}
     $$
@@ -350,6 +332,8 @@ Contemporary Physics}
     \end{itemize}
     
 \end{frame}
+
+\section{Interpretation on Higgs Portals}
 
 \begin{frame}{Higgs Portals}
     We assume the minimal Higgs portal setup with singlet DM of spin 0 or spin 1/2. In that follows, we consider these options separately and allow for both CP-even and CP-odd couplings of the DM fermion to the Higgs field. The Lagrangian reads
