Add event preselection criteria to slides: specify requirements for electrons, muons, photons, and jets

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -208,12 +208,15 @@ Contemporary Physics}
             \end{itemize}
         \end{column}
     \end{columns}
-\end{frame}
+    Some basic criteria must to be satisfied to \textbf{preselect} the events:
+    \begin{itemize}
+        \item 0 electrons
+        \item 0 muons
+        \item 0 isolated photons
+        \item At least 2 jets with $p_T > 30$ GeV
+        \item Large missing transverse momentum ($p_T^{\text{miss}} > 100$ GeV)
+    \end{itemize}
 
-\begin{frame}{VBF Jets are boosted with High-PT signatures}{Leading Jet}
-    \begin{minipage}{0.97\textwidth}
-        \includegraphics[width=\textwidth]{../Images/leading_jet_pt_comparison.pdf}
-    \end{minipage}
     % \begin{minipage}{0.47\textwidth}
     %     \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
     % \end{minipage}
