Add new slide for leading jet comparison: include high-PT signature visualization

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -221,12 +221,17 @@ Contemporary Physics}
     %     \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
     % \end{minipage}
 \end{frame}
+\begin{frame}{VBF Jets are boosted with High-PT signatures}{Leading Jet}
+    \begin{minipage}{0.97\textwidth}
+        \includegraphics[width=\textwidth]{../Images/leading_jet_pt_comparison.pdf}
+    \end{minipage}
+\end{frame}
+
 \begin{frame}{VBF Jets are boosted with High-PT signatures}{Subleading Jet}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
     \end{minipage}
 \end{frame}
-
 \begin{frame}{VBF Jets are forward}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/leading_jet_eta_comparison.pdf}
